# dualsense-controller-python

./: .env.template  .gitignore  LICENSE  Makefile  README.md  README_PROTOCOL.md  example.py  pyproject.toml  requirements.txt
.run/: contextmanager_usage_example.run.xml  core_example.run.xml  example.run.xml  example_simple.run.xml  example_trigger .run.xml  example_trigger.run.xml  example_trigger_deprecated.run.xml  shark.run.xml  tests.run.xml  tests_test_deadzone.run.xml  tests_test_update_level.py.run.xml  tests_test_update_level.run.xml
docs/: dualsense-controller.ods
dualsense_controller/: BaseStates.py  ControllerDevice.py  DualSenseController.py  HidControllerDevice.py  ReadStates.py  State.py  States.py  WriteStates.py  __init__.py  common.py  enum.py  events.py  example.py  exceptions.py  reports.py  typedef.py  util.py  utils.py
dualsense_controller/common/: __init__.py  common_.py
dualsense_controller/core/: hidapi.py
dualsense_controller/report/: __init__.py  out_report.py
dualsense_controller/report/in_report/: Bt01InReport.py  Bt31InReport.py  InReport.py  Usb01InReport.py  __init__.py  common.py
dualsense_controller/report/out_report/: Bt01OutReport.py  Bt31OutReport.py  OutReport.py  Usb01OutReport.py  __init__.py  enum.py  out_report.py
dualsense_controller/state/: BaseStates.py  ReadStates.py  State.py  StateValueCalc.py  StateValueMapper.py  WriteStates.py  __init__.py  calc.py  common.py
res/: 70-dualsense.rules  91-dualsense.rules  99-dualsense.rules
research/: DSX_Resistance.csv  ExtendInput.DataTools.DualSense.TriggerEffectGenerator.cs  HAPTIC_TRIGGER_EFFECTS.md  dualsense-controller.ods
src/dualsense_controller/: DualSenseController.py  HidControllerDevice.py  __init__.py  enum.py
src/dualsense_controller/api/: DualSenseController.py  Properties.py  RestictedStatesAccess.py  RestrictedStateAccess.py  __init__.py  contextmanager.py  enum.py  property.py  typedef.py
src/dualsense_controller/api/property/: AccelerometerProperty.py  BatteryProperty.py  BenchmarkProperty.py  ButtonProperty.py  ConnectionProperty.py  ExceptionProperty.py  GyroscopeProperty.py  JoyStickProperty.py  LightbarProperty.py  MicrophoneProperty.py  OrientationProperty.py  PlayerLedsProperty.py  RumbleProperty.py  TouchFingerProperty.py  TriggerEffectProperty.py  TriggerFeedbackProperty.py  TriggerProperty.py  base.py
src/dualsense_controller/core/: Benchmarker.py  DualSenseControllerCore.py  HidControllerDevice.py  UpdateBenchmark.py  enum.py  exception.py  log.py  typedef.py  util.py
src/dualsense_controller/core/core/: Lockable.py
src/dualsense_controller/core/hidapi/: LICENSE.txt  __init__.py  hidapi.py
src/dualsense_controller/core/report/: ReportWrap.py
src/dualsense_controller/core/state/: BaseStates.py  State.py  StateValueCallbackManager.py  ValueCompare.py  enum.py  typedef.py  value_type.py
src/dualsense_controller/report/in_report/: Bt01InReport.py  Bt31InReport.py  typedef.py
src/dualsense_controller/report/out_report/: Bt31OutReport.py  OutReport.py  Usb01OutReport.py
src/dualsense_controller/state/: State.py  typedef.py
src/examples/: contextmanager_usage_example.py  core_example.py  example.py  example_simple.py  example_trigger.py  example_trigger_deprecated.py
tests/: common.py  conftest.py  mock.py  test_DualSenseController.py  test_base.py  test_bubs.py  test_creation.py  test_deadzone.py  test_mapping.py  test_update_level.py
tests/mock/: HidapiDeviceMock.py  InRep.py  InRepBt01.py  InRepBt31.py  InRepUsb01.py  MockedHidapiMockedHidapiDevice.py  common.py
tests/mock/in_rep/: InRepBt01.py  InRepBt31.py  InRepUsb01.py
tools_dev/shark/: TSharkCapture.py  dsadasdas  shark.py  shark.sh  watch.sh
(+40 files in other folders)
