[tool.poetry]
name = "dualsense-controller"
version = "0.1.0"
description = "Use DualSense Controller with Python."
authors = ["Albrecht Nitsche <albrechtnitsche@gmail.com>"]
license = "MIT LICENSE"
readme = "README.md"
packages = [{ include = "dualsense_controller" }]

repository = 'https://github.com/yesbotics/dualsense-controller-python'
homepage = 'https://github.com/yesbotics/dualsense-controller-python'

[tool.poetry.dependencies]
python = "^3.10"
pyee = "^11.0.0"
pyquaternion = "^0.9.9"
numpy = "^1.25.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
cffi = "^1.15.1"
setuptools = "^68.0.0"

[tool.poetry.scripts]
dualsense-controller-example = 'example:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
