[tool.poetry]
name = "dualsense-controller"
version = "0.1.0-pre.1"
description = "Use DualSense Controller with Python."
authors = ["Albrecht Nitsche <albrechtnitsche@gmail.com>"]
license = "MIT LICENSE"
readme = "README.md"
packages = [
    { include = "examples", from = "src" },
    { include = "dualsense_controller", from = "src" }
]

repository = 'https://github.com/yesbotics/dualsense-controller-python'
homepage = 'https://github.com/yesbotics/dualsense-controller-python'

[tool.poetry.dependencies]
python = "^3.10"
pyee = "^11.0.0"
pyquaternion = "^0.9.9"
numpy = "^1.25.1"
cffi = "^1.15.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.0.0"
windows-curses = "^2.3.1"

[tool.poetry.scripts]
dualsense-controller-example = 'examples.example:main'
shark = 'tools_dev.shark:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
